Fix: スキーマに合わせて定義を変更
